@@ -1,3 +1,6 @@
+Changes in QMPlay2 build 16.06.02:
+	- fixed color in graphics subtitles,
+
 Changes in QMPlay2 build 16.06.01:
 	- diplaying and filtering all planar 8-bit YUV pixel formats (only OpenGL2 and QPainter video outputs)
 	- allow to display only file names in playlist,
